Inclusão do projet aula_bootstrap

--- a/index.html
+++ b/index.html
@@ -7,23 +7,80 @@
         <link rel="stylesheet" type ="text/css" href="css/style.css">
      </head>
      <body>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light margin">
             <a class="navbar-brand" href="#">
-                <img src="img/GloboLabs.png" width="220p" height="80">
+                <img src="img/GloboLabs.png" width="220" height="80">
             </a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav"> 
                     <li class="navbar-item">
-                        <a class="nav-link" href="#">Quem somos</a>
+                        <a class="nav-link" href="#quemsomos">Quem somos</a>
                     </li>
                     <li class="navbar-item">
-                        <a class="nav-link" href="#">Parceiros</a>
+                        <a class="nav-link" href="#parceiros">Parceiros</a>
                     </li>
                     <li class="navbar-item">
-                        <a class="nav-link" href="#">Serviços</a>
+                        <a class="nav-link" href="#serviços">Serviços</a>
                     </li>
                 </ul>
             </div>
         </nav>
+
+        <section id="quemsomos">
+            <div class="container-fluid quem-somos text-center margin">
+                <h3 class="margin">QUEM SOMOS</h3>
+                <img src="img/Team.jpg" class="rounded-circle" width="300" height="300">
+                <h3>Somos um time comprometido com o resultado</h3>
+            </div>
+        </section>
+
+        <section id="parceiros">
+            <div class="container-fluid text-center margin parceiros">
+                <h3 class="margin">PARCEIROS</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <img src="img/Logo-DIO.png" width="100%">   
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/Logo-DIO.png" width="100%">   
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/Logo-DIO.png" width="100%">   
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="serviços">
+            <div class="container-fluid text-center margin Serviços">
+                <h3 class="margin">SERVIÇOS</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed dp eiusmod tempor incididunt ut labore et dolore magna aliqua
+                                </p>
+                            <img src="img/App.jpg" width="100%">
+                        </div>
+                        <div class="col-lg-4">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed dp eiusmod tempor incididunt ut labore et dolore magna aliqua
+                                </p>
+                            <img src="img/Site1.jpg" width="100%">
+                        </div>
+                        <div class="col-lg-4">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed dp eiusmod tempor incididunt ut labore et dolore magna aliqua
+                                </p>
+                            <img src="img/Site2.jpg" width="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="container-fluid text-center bg-footer">
+            <p>Desenvolvido por Valdemir Nunes Machado</p>
+        </footer>
+
      </body>
 </html>
